@@ -1,3 +1,8 @@
+2005-02-13  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgdkpangorenderer.c: Added Pango::Renderer.default. 
+	* sample/misc/pangorenderer.rb: Check Ruby/GTK version. 
+
 2005-02-10  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgtkradioaction.c: Added Gtk::RadioAction#group, #set_group. 
